update lagi dan lagi

--- a/style/style1.css
+++ b/style/style1.css
@@ -485,6 +485,10 @@ nav ul li a:hover {
   padding-top: 18px
 }
 
+.meet-customers:hover {
+  text-decoration: underline;
+}
+
 .marketing {
   display: flex;
   justify-content: center;
